postgres-deployment.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: psql
spec:
  replicas: 1
  serviceName: psql
  selector:
    matchLabels:
      role: db
  template:
    metadata:
      labels:
        role: db
    spec:
      containers:
      - name: psql-container
        image: postgres:latest
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"
        volumeMounts:
        - name: init-sql-configmap
          mountPath: /docker-entrypoint-initdb.d
        - name: datadir
          mountPath: /var/lib/postgresql/data
      volumes:
        - name: init-sql-configmap
          configMap:
            name: init-db-sql
  volumeClaimTemplates:
  - metadata:
      name: datadir
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 5G
