postgres-cluster-ip-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: psql
spec:
  type: ClusterIP
  ports:
    - name: "psql-port"
      protocol: "TCP"
      port: 5432
      targetPort: 5432
  selector:
    role: db
